--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,88 @@
-/* You can add global styles to this file, and also import other style files */
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,700);
+@import 'material-icons';
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    background-color: #404040;
+    height: 100%;
+    color: #5c5c5c;
+    font-size: 11.5pt;
+}
+
+body {
+    margin: 0;
+    font-family: 'Source Sans Pro', sans-serif;
+    height: 100%;
+    font-size: 1rem;
+}
+
+.card {
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 1), 0 15px 30px rgba(0, 0, 0, 0.12);
+    background-color: #ffffff;
+
+    &.dark-card {
+        background-color: #515c6d;
+    }
+}
+
+.floating-action-button {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #bdbd00;
+    box-shadow: 0 1px 3px rgba(#000000, .35);
+    color: #ffffff;
+    text-align: center;
+    font-size: 17pt;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: box-shadow .3s ease, background .3s ease;
+
+    &:not(.disabled):hover {
+        box-shadow: 0 4px 10px rgba(black, 0.3);
+        background-color: darken(#bdbd00, 3%);
+        cursor: pointer;
+        transition: box-shadow .3s ease, background .3s ease;
+    }
+
+    .text {
+        transform: rotate(0deg);
+        transition: transform .35s;
+        // If this were not present, the text would "jump" after the transformation due to anti-aliasing
+        will-change: transform;
+    }
+
+    &:hover .text {
+        transform: rotate(180deg);
+        transition: transform .35s;
+    }
+
+    &.disabled {
+        background-color: #c9c9c9;
+    }
+}
+
+.button {
+    border: 2px solid #a0b105;
+    padding: 5px 10px;
+    background-color: #fff;
+    color: #a0b105;
+    cursor: pointer;
+    transition: 0.2s all;
+    font-size: 1em;
+    text-align: center;
+    margin-top: 20px;
+    font-weight: lighter;
+
+    &:hover {
+        background-color: #a0b105;
+        color: #ffffff;
+    }
+}
