--- a/src/app/add/add.component.scss
+++ b/src/app/add/add.component.scss
@@ -11,6 +11,28 @@
     flex-direction: row;
 }
 
+#drop-overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    // Must be displayed above the navigation and the head bar.
+    z-index: 999;
+    background: rgba(#bdbd00, 0.05);
+    border: 3px solid #bdbd00;
+    animation: border-pulse-blue 0.8s infinite alternate;
+}
+
+@keyframes border-pulse-blue {
+    0% {
+        border-color: #bdbd00;
+    }
+    100% {
+        border-color: rgba(#15A9E8, 0.1);
+    }
+}
+
 .floating-action-button {
     position: initial;
     width: 40px;
@@ -25,40 +47,4 @@
     color: #bdbd00;
     font-size: 1.2em;
     padding-left: 10px;
-}
-
-#hash-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.filename {
-    font-weight: bold;
-}
-
-.hash {
-    word-break: break-all;
-    padding: 0 10px;
-    text-align: center;
-}
-
-mat-icon#file-to-hash {
-    transform: rotate(90deg);
-    margin: 10px;
-}
-
-#remove-file-container {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-}
-
-mat-icon#remove-file {
-    opacity: 0.5;
-    cursor: pointer;
-
-    &:hover {
-        opacity: 1;
-    }
 }
