--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,7 +15,8 @@
   background-size: contain;
   position: fixed;
   top: 10px;
-  left: 10px; }
+  left: 10px;
+  cursor: pointer; }
 
 #card {
   min-height: 200px;
