--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
     padding: 30px;
     text-align: center;
     font-size: 1.2em;
-    box-shadow: 0 2px 7px rgba(0,0,0,0.5);
+    box-shadow: 0 2px 7px rgba(0, 0, 0, 0.5);
 
     a {
         color: #fff;
@@ -19,6 +19,7 @@
     position: fixed;
     top: 10px;
     left: 10px;
+    cursor: pointer;
 }
 
 #card {
