--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,17 @@ body {
     font-size: 1rem;
 }
 
+h2 {
+    color: #bdbd00;
+    margin: 8px 0 5px;
+    text-align: center;
+    font-weight: normal;
+}
+
+a {
+    color: #bdbd00;
+}
+
 .card {
     box-shadow: 0 3px 10px rgba(0, 0, 0, 1), 0 15px 30px rgba(0, 0, 0, 0.12);
     background-color: #ffffff;
