--- a/src/app/hash-details/hash-details.component.css
+++ b/src/app/hash-details/hash-details.component.css
@@ -1,10 +1,15 @@
 :host {
-  width: 100%; }
-
-#hash-details-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 0 15px; }
+
+#transaction-pending-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  #transaction-pending-container #transaction-pending-label {
+    padding-bottom: 10px; }
 
 #reset-container {
   position: absolute;
