--- a/src/app/hash-details/hash-details.component.html
+++ b/src/app/hash-details/hash-details.component.html
@@ -1,56 +1,54 @@
-<div id="hash-details-container">
-    <div id="reset-container" matTooltip="Back to file upload">
-        <mat-icon id="reset" (click)="reset()">arrow_back</mat-icon>
+<div id="reset-container" matTooltip="Back to file upload">
+    <mat-icon id="reset" (click)="reset()">arrow_back</mat-icon>
+</div>
+
+<h2>Results</h2>
+
+<div id="transaction-pending-container" *ngIf="requestPending">
+    <div id="transaction-pending-label">
+        Checking smart contract for document hashes ...
     </div>
-
-    <h2>Results</h2>
-
-    <div id="transaction-pending-container" *ngIf="requestPending">
-        <div id="transaction-pending-icon">
-            <svg width='24px' height='24px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ring-alt">
-                <rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect>
-                <circle cx="50" cy="50" r="40" stroke="" fill="none" stroke-width="10" stroke-linecap="round"></circle>
-                <circle cx="50" cy="50" r="40" stroke="#99BF0E" fill="none" stroke-width="6" stroke-linecap="round">
-                    <animate attributeName="stroke-dashoffset" dur="2s" repeatCount="indefinite" from="0" to="502"></animate>
-                    <animate attributeName="stroke-dasharray" dur="2s" repeatCount="indefinite" values="150.6 100.4;1 250;150.6 100.4"></animate>
-                </circle>
-            </svg>
-        </div>
-        <div id="transaction-pending-label">
-            Waiting for transaction {{documentHashContract.pendingTransactionHash}}[...] to be included in a block...
-        </div>
+    <div id="transaction-pending-icon">
+        <svg width='24px' height='24px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ring-alt">
+            <rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect>
+            <circle cx="50" cy="50" r="40" stroke="" fill="none" stroke-width="10" stroke-linecap="round"></circle>
+            <circle cx="50" cy="50" r="40" stroke="#99BF0E" fill="none" stroke-width="6" stroke-linecap="round">
+                <animate attributeName="stroke-dashoffset" dur="2s" repeatCount="indefinite" from="0" to="502"></animate>
+                <animate attributeName="stroke-dasharray" dur="2s" repeatCount="indefinite" values="150.6 100.4;1 250;150.6 100.4"></animate>
+            </circle>
+        </svg>
     </div>
+</div>
 
-    <div id="results-container">
-        <table *ngIf="!fileHashNotFound">
-            <tr>
-                <td class="label">File Hash</td>
-                <td class="value">
-                    <pp-hash [hash]="fileHash"></pp-hash>
-                </td>
-            </tr>
-            <tr>
-                <td class="label">Date</td>
-                <td class="value">
-                    {{date}}
-                </td>
-            </tr>
-            <tr>
-                <td class="label">Perpetuated by</td>
-                <td class="value">
-                    <pp-hash [hash]="perpetuatedBy" etherscanLinkType="address"></pp-hash>
-                </td>
-            </tr>
-            <tr>
-                <td class="label">Transaction Hash</td>
-                <td class="value">
-                    <pp-hash [hash]="transactionHash" etherscanLinkType="tx"></pp-hash>
-                </td>
-            </tr>
-        </table>
+<div id="results-container">
+    <table *ngIf="!fileHashNotFound">
+        <tr>
+            <td class="label">File Hash</td>
+            <td class="value">
+                <pp-hash [hash]="fileHash"></pp-hash>
+            </td>
+        </tr>
+        <tr>
+            <td class="label">Date</td>
+            <td class="value">
+                {{date}}
+            </td>
+        </tr>
+        <tr>
+            <td class="label">Perpetuated by</td>
+            <td class="value">
+                <pp-hash [hash]="perpetuatedBy" etherscanLinkType="address"></pp-hash>
+            </td>
+        </tr>
+        <tr>
+            <td class="label">Transaction Hash</td>
+            <td class="value">
+                <pp-hash [hash]="transactionHash" etherscanLinkType="tx"></pp-hash>
+            </td>
+        </tr>
+    </table>
 
-        <div class="error" *ngIf="fileHashNotFound">
-            The given file hash could not be found. Feel free to <a [routerLink]="'/perpetuate/' + fileHash">perpetuate this hash</a>.
-        </div>
+    <div class="error" *ngIf="fileHashNotFound">
+        The given file hash could not be found. Feel free to <a [routerLink]="'/perpetuate/' + fileHash">perpetuate this hash</a>.
     </div>
 </div>
