--- a/src/app/perpetuate/perpetuate.component.html
+++ b/src/app/perpetuate/perpetuate.component.html
@@ -1,30 +1,34 @@
-<div id="hash-container">
+<div id="remove-file-container" matTooltip="Back to file upload">
+    <mat-icon id="remove-file" (click)="removeUploadedFile()">arrow_back</mat-icon>
+</div>
+
+<div id="hash-container" *ngIf="!documentHashContract.isTransactionPending()">
     <span class="filename">{{filename}}</span>
     <div class="separator">
         <mat-icon id="file-to-hash">arrow_forward_ios</mat-icon>
     </div>
     <pp-hash [hash]="hash"></pp-hash>
 
-    <div id="remove-file-container" matTooltip="Back to file upload">
-        <mat-icon id="remove-file" (click)="removeUploadedFile()">arrow_back</mat-icon>
+    <div class="button" (click)="writeHashToBlockchain()">Perpetuate</div>
+</div>
+
+<div id="transaction-pending-container" *ngIf="documentHashContract.isTransactionPending()">
+    <div id="transaction-pending-label">
+        <div *ngIf="documentHashContract.numberOfConfirmations === null">
+            Waiting for transaction
+            <pp-hash [hash]="documentHashContract.pendingTransactionHash" etherscanLinkType="tx"></pp-hash>
+            to be included in a block...
+        </div>
+        <div *ngIf="documentHashContract.numberOfConfirmations !== null">Received confirmation {{documentHashContract.numberOfConfirmations}}/{{documentHashContract.TARGET_NUMBER_OF_CONFIRMATIONS}}... <span id="skip-waiting-for-confirmations" (click)="skipWaitingForConfirmations()">Skip.</span></div>
     </div>
-
-    <div class="button" *ngIf="!documentHashContract.isTransactionPending()" (click)="writeHashToBlockchain()">Perpetuate</div>
-
-    <div id="transaction-pending-container" *ngIf="documentHashContract.isTransactionPending()">
-        <div id="transaction-pending-icon">
-            <svg width='24px' height='24px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ring-alt">
-                <rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect>
-                <circle cx="50" cy="50" r="40" stroke="" fill="none" stroke-width="10" stroke-linecap="round"></circle>
-                <circle cx="50" cy="50" r="40" stroke="#99BF0E" fill="none" stroke-width="6" stroke-linecap="round">
-                    <animate attributeName="stroke-dashoffset" dur="2s" repeatCount="indefinite" from="0" to="502"></animate>
-                    <animate attributeName="stroke-dasharray" dur="2s" repeatCount="indefinite" values="150.6 100.4;1 250;150.6 100.4"></animate>
-                </circle>
-            </svg>
-        </div>
-        <div id="transaction-pending-label">
-            <span *ngIf="documentHashContract.numberOfConfirmations === null">Waiting for transaction {{documentHashContract.getAbbreviatedPendingTransactionHash()}} to be included in a block...</span>
-            <span *ngIf="documentHashContract.numberOfConfirmations !== null">Received confirmation {{documentHashContract.numberOfConfirmations}}/{{documentHashContract.TARGET_NUMBER_OF_CONFIRMATIONS}}...<a href="#" (click)="skipWaitingForConfirmations()">Skip.</a></span>
-        </div>
+    <div id="transaction-pending-icon">
+        <svg width='24px' height='24px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ring-alt">
+            <rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect>
+            <circle cx="50" cy="50" r="40" stroke="" fill="none" stroke-width="10" stroke-linecap="round"></circle>
+            <circle cx="50" cy="50" r="40" stroke="#99BF0E" fill="none" stroke-width="6" stroke-linecap="round">
+                <animate attributeName="stroke-dashoffset" dur="2s" repeatCount="indefinite" from="0" to="502"></animate>
+                <animate attributeName="stroke-dasharray" dur="2s" repeatCount="indefinite" values="150.6 100.4;1 250;150.6 100.4"></animate>
+            </circle>
+        </svg>
     </div>
 </div>
