--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,10 @@
     <a href="https://blockchain.project-partners.de/start/" class="entry">Blockchain Services</a>
     <span class="divider"> | </span>
     <a href="https://blockchain.project-partners.de/footer/impressum/" class="entry">Imprint</a>
+    <span class="divider"> | </span>
+    <a href="https://github.com/ProjectPartnersManagement/document-hash" class="entry">GitHub</a>
+    <span class="divider"> | </span>
+    <a href="https://opensource.org/licenses/MIT" class="entry">License: MIT</a>
+    <span class="divider"> | </span>
+    <a [href]="'https://etherscan.io/address/' + SMART_CONTRACT_ADDRESS + '#code'" class="entry">Smart Contract</a>
 </div>
