--- a/src/app/perpetuate/perpetuate.component.scss
+++ b/src/app/perpetuate/perpetuate.component.scss
@@ -30,6 +30,7 @@ mat-icon#file-to-hash {
     position: absolute;
     top: 10px;
     left: 10px;
+    cursor: pointer;
 }
 
 mat-icon#remove-file {
