--- a/src/app/add/add.component.scss
+++ b/src/app/add/add.component.scss
@@ -48,3 +48,18 @@
     font-size: 1.2em;
     padding-left: 10px;
 }
+
+#search-hash-manually {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    color: #c1c1c1;
+    transition: all 0.2s;
+
+    &:hover {
+        color: #000000;
+    }
+}
