--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,14 @@
     Metamask could not be detected. Please install or activate the <a href="https://www.google.com/search?q=install+metamask" target="_blank">Browser Plugin Metamask</a>.
 </div>
 <div id="logo" (click)="navigateToStartPage()"></div>
-<h1></h1>
+
+<h1>Generate Tamper-Proof Timestamps for Your Documents on Ethereum</h1>
+<div id="client-side-note">Client-side, open-source Ethereum DApp. Files will not leave your PC. Only the hash will be saved.</div>
+
 <div class="card" id="card">
     <router-outlet></router-outlet>
 </div>
+
 <div id="footer">
     <a href="https://blockchain.project-partners.de/start/" class="entry">Blockchain Services</a>
     <span class="divider"> | </span>
