--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,12 @@
+h1 {
+    padding-top: 5px;
+}
+
+#client-side-note {
+    text-align: center;
+    color: #777777;
+}
+
 #metamask-missing-error {
     background: #da0000;
     color: #fff;
@@ -29,6 +38,7 @@
     top: calc(50% - 100px);
     left: calc(50% - 210px);
     display: flex;
+    justify-content: center;
 }
 
 router-outlet {
