--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,11 @@ body {
   height: 100%;
   font-size: 1rem; }
 
+h1 {
+  text-align: center;
+  color: #bdbd00;
+  font-weight: normal; }
+
 h2 {
   color: #bdbd00;
   margin: 8px 0 5px;
