--- a/src/app/add/add.component.css
+++ b/src/app/add/add.component.css
@@ -37,16 +37,47 @@
   font-size: 1.2em;
   padding-left: 10px; }
 
-#search-hash-manually {
+#further-actions-container {
   position: absolute;
   bottom: 5px;
   right: 5px;
   display: flex;
-  align-items: center;
-  cursor: pointer;
-  color: #c1c1c1;
-  transition: all 0.2s; }
-  #search-hash-manually:hover {
-    color: #000000; }
+  align-items: center; }
+  #further-actions-container .entry {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    color: #c1c1c1;
+    transition: all 0.2s; }
+    #further-actions-container .entry:hover {
+      color: #000000; }
+  #further-actions-container .divider {
+    color: #c1c1c1;
+    margin: 0 10px; }
+
+#instructions-overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.4); }
+
+#instructions {
+  position: absolute;
+  background: #ffffff;
+  padding: 20px; }
+  #instructions h3 {
+    margin-top: 0; }
+  #instructions .close-icon {
+    cursor: pointer;
+    opacity: .5;
+    transition: opacity .2s ease;
+    position: absolute;
+    top: 20px;
+    right: 20px; }
+    #instructions .close-icon:hover {
+      opacity: 1;
+      transition: opacity .2s ease; }
 
 /*# sourceMappingURL=add.component.css.map */
