--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -12,7 +12,7 @@
   position: absolute;
   top: 10px;
   left: 10px;
-  cursor: point; }
+  cursor: pointer; }
 
 mat-form-field {
   width: 100%; }
