--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,15 @@
 <div id="metamask-missing-error" *ngIf="metamaskMissing">
     Metamask could not be detected. Please install or activate the <a href="https://www.google.com/search?q=install+metamask" target="_blank">Browser Plugin Metamask</a>.
 </div>
-<div id="logo" (click)="navigateToStartPage()"></div>
 
-<h1>Generate Tamper-Proof Timestamps for Your Documents on Ethereum</h1>
-<div id="client-side-note">Client-side, open-source Ethereum DApp. Files will not leave your PC. Only the hash will be saved.</div>
+<div id="logo-and-headline-container">
+    <div id="logo" class="logo-flex-container" (click)="navigateToStartPage()"></div>
+    <div id="headline-container">
+        <h1>Generate Tamper-Proof Timestamps for Your Documents on Ethereum</h1>
+        <div id="client-side-note">Client-side, open-source Ethereum DApp. Files will not leave your PC. Only the hash will be saved.</div>
+    </div>
+    <div id="dummy" class="logo-flex-container"></div>
+</div>
 
 <div class="card" id="card">
     <router-outlet></router-outlet>
