--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
 h1 {
     padding-top: 5px;
+    margin-bottom: 5px;
+    font-size: 20pt;
 }
 
 #client-side-note {
@@ -20,15 +22,27 @@ h1 {
     }
 }
 
-#logo {
-    background-image: url("/assets/pp-logo.png");
-    height: 60px;
-    width: 200px;
-    background-size: contain;
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    cursor: pointer;
+
+#logo-and-headline-container {
+    display: flex;
+    align-items: center;
+
+    #logo {
+        background-image: url("/assets/pp-logo.png");
+        height: 60px;
+        width: 200px;
+        background-size: contain;
+        padding: 10px;
+        cursor: pointer;
+    }
+
+    .logo-flex-container {
+        width: 200px;
+    }
+
+    #headline-container {
+        flex: 1;
+    }
 }
 
 #card {
