Show error if searched hash is not found.

--- a/src/app/hash-details/hash-details.component.css
+++ b/src/app/hash-details/hash-details.component.css
@@ -30,4 +30,7 @@ td.value {
   color: #bdbd00;
   padding-left: 10px; }
 
+.error {
+  text-align: center; }
+
 /*# sourceMappingURL=hash-details.component.css.map */
